# services/lot-bid-history/lot-bid-history-swagger.json
@@ -142,6 +142,76 @@
           ]
         }
       },
+      "/admin/bid/{bid_id}": {
+        "delete": {
+          "summary": "Delete Bid",
+          "description": "Delete a bid from the system. This will remove the bid from the history and update the top bidder accordingly.",
+          "tags": [
+            "Bid History Management"
+          ],
+          "parameters": [
+            {
+              "name": "bid_id",
+              "in": "path",
+              "required": true,
+              "example": "682acbe62ddaf4fca7223db9",
+              "description": "The unique identifier of the bid to be deleted.",
+              "schema": {
+                "type": "string"
+              }
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "Bid successfully deleted",
+              "content": {
+                "application/json": {
+                  "example": {
+                    "message": "Bid successfully deleted",
+                    "deleted_bid_id": "682acbe62ddaf4fca7223db9",
+                    "new_top_bidder": "John Doe"
+                  }
+                }
+              }
+            },
+            "400": {
+              "description": "Bad request, such as trying to delete a bid on a closed auction",
+              "content": {
+                "application/json": {
+                  "example": {
+                    "message": "Cannot delete bid on a closed or locked auction"
+                  }
+                }
+              }
+            },
+            "404": {
+              "description": "Bid not found",
+              "content": {
+                "application/json": {
+                  "example": {
+                    "message": "Bid not found"
+                  }
+                }
+              }
+            },
+            "500": {
+              "description": "Internal server error.",
+              "content": {
+                "application/json": {
+                  "example": {
+                    "message": "There was an error while deleting the bid"
+                  }
+                }
+              }
+            }
+          },
+          "security": [
+            {
+              "BearerAuth": []
+            }
+          ]
+        }
+      },
       "/seller/bids": {
         "get": {
           "summary": "List Bids",
@@ -260,4 +330,3 @@
       }
     }
   }
-  
